[package]
name = "monkey_test"
version = "0.4.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/jockbert/monkey_test"
repository = "https://github.com/jockbert/monkey_test"
documentation = "https://docs.rs/monkey_test/"
authors = ["Joakim Akerblom <per.joakim.eriksson@gmail.com>"]

description = "A property based testing (PBT) tool like QuickCheck, ScalaCheck and similar libraries, for the Rust programming language."
keywords = ["testing", "property", "PBT", "quickcheck", "shrinking"]
categories = ["development-tools::testing"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
min_max_traits = "0.1"
num-traits = "0.2"
rand = "0.8.5"
rand_chacha = "0"

[dev-dependencies]
num = "0"
assert_approx_eq = "1.1"
