[package]
name = "monkey_test"
version = "0.7.5"
rust-version = "1.73"
edition = "2021"
license = "MIT"
homepage = "https://github.com/jockbert/monkey_test"
repository = "https://github.com/jockbert/monkey_test"
documentation = "https://docs.rs/monkey_test/"
authors = ["Joakim Akerblom <per.joakim.eriksson@gmail.com>"]

description = "A property based testing (PBT) tool like QuickCheck, ScalaCheck and similar libraries, for the Rust programming language."
keywords = ["testing", "property", "quickcheck", "shrinking", "hypothesis"]
categories = ["development-tools::testing"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
num-traits = "0.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
panic-message = "0.3.0"

[dev-dependencies]
assert_approx_eq = "1.1"
